--- a/item.html
+++ b/item.html
@@ -8,12 +8,12 @@
   <header class="main-header">
     <div class="container">
       <nav class="main-navigation">
+        <a href="index.html"><img src="#" alt="Barbershop"></a>
         <ul>
-          <li><a href="#">Barbershop</a></li>
           <li><a href="#">информация</a></li>
           <li><a href="#">новости</a></li>
           <li><a href="#">прайс-лист</a></li>
-          <li><a href="#">магазин</a></li>
+          <li><a href="shop.html">магазин</a></li>
           <li><a href="#">контакты</a></li>
         </ul>
       </nav>
@@ -24,59 +24,61 @@
   </header>
   <main class="container">
     <h1>Набор для путешествий "Baxter of Сalifornia"</h1>
-    <breadcrumbs>
-      <a href="#">Главная</a>
-      <a href="#">Магазин</a>
-      <a href="#">Средства ухода</a>
-      <span class="now">Набор для путешествий "Baxter of Сalifornia"</span>
-    </breadcrumbs>
-    <section>
-      <img src="#" width="" height="">
-      <a href="#"><img src="#" width="" height=""></a>
-      <a href="#"><img src="#" width="" height=""></a>
-      <a href="#"><img src="#" width="" height=""></a>
-    </section>
-    <section>
-      <p>Есть в ниличии</p>
-      <i>Артикул: dexter-ae</i>
-      <p>
+    <ul class="breadcrumbs">
+      <li><a href="#">Главная</a></li>
+      <li><a href="#">Магазин</a></li>
+      <li><a href="#">Средства ухода</a></li>
+      <li class="active">Набор для путешествий "Baxter of Сalifornia"</li>
+    </ul>
+    <div class="active_item">
+      <section>
+        <img src="http://placehold.it/450x500">
+        <a href="#"><img src="http://placehold.it/140x150"></a>
+        <a href="#"><img src="http://placehold.it/140x150"></a>
+        <a href="#"><img src="http://placehold.it/140x150"></a>
+      </section>
+      <section>
+        <p>Есть в ниличии</p>
+        <i>Артикул: dexter-ae</i>
+        <p>
         Travel Kit – необходимый аксессуар во время любого путешествия.
         В аккуратной кожаной сумке находится все,
         что нужно для бритья и ухода за кожей во время рабочей поездки
          или отдыха: средство для умывания, увлажняющий крем, крем для бритья,
          крем после бритья, шампунь.
         Набор также может стать отличным подарком.
-      </p>
-      <div class="price">2 900 РУБ.</div>
-      <a href="#">Купить</a>
-      <h2>В набор входят:</h2>
-        <ul>
-          <li>Средство для умывания (50 мл)</li>
-          <li>Увлажняющий крем (50 мл)</li>
-          <li>Крем для бритья (50 мл)</li>
-          <li>Крем после бритья, шампунь (50 мл)</li>
-          <li>Удобная кожаная косметичка</li>
-        </ul>
-    </section>
+        </p>
+        <div class="price">2 900 руб.</div>
+        <a href="#">Купить</a>
+        <h2>В набор входят:</h2>
+          <ul>
+            <li>Средство для умывания (50 мл)</li>
+            <li>Увлажняющий крем (50 мл)</li>
+            <li>Крем для бритья (50 мл)</li>
+            <li>Крем после бритья, шампунь (50 мл)</li>
+            <li>Удобная кожаная косметичка</li>
+          </ul>
+      </section>
+    </div>
   </main>
   <footer class="main-footer">
     <div class="container">
-      <section class="footer-contacts">
+      <div class="footer-contacts">
         Барбершоп «Бородинский»<br>
         Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
         <a href="#">Как нас найти?</a><br>
-        Телефон: +7 (812) 666-02-66
-      </section>
-      <section class="footer-social">
+        <a href="tel:+78126660266"></a>
+      </div>
+      <div class="footer-social">
         <p>Давайте дружить!</p>
         <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
         <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
         <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
-      </section>
-      <section class="footer-copyright">
+      </div>
+      <div class="footer-copyright">
         <p>Разработано:</p>
         <a href="https://htmlacademy.ru">HTML Academy</a>
-      </section>
+      </div>
     </div>
   </footer>
 </body>
