--- a/shop.html
+++ b/shop.html
@@ -27,7 +27,7 @@
       <breadcrumbs>
         <a href="#">Главная</a>
         <a href="#">Магазин</a>
-        <span>Средства ухода</span>
+        <span class="now">Средства ухода</span>
       </breadcrumbs>
     <h2>Производители:</h2>
     <form>
@@ -59,37 +59,37 @@
       <article class="catalog-item">
         <a href="#"><img src="#" width height></a>
         <p>Набор для путешествий "Baxter of Сalifornia"</p>
-        <div>2 900 РУБ.</div>
+        <div class="price">2 900 РУБ.</div>
         <a href="#">Купить</a>
       </article>
       <article class="catalog-item">
         <a href="#"><img src="#" width height></a>
         <p>Увлажняющий кондиционер "Baxter of Сalifornia"</p>
-        <div>750 РУБ.</div>
+        <div class="price">750 РУБ.</div>
         <a href="#">Купить</a>
       </article>
       <article class="catalog-item">
         <a href="#"><img src="#" width height></a>
         <p>Гель для волос "Suavecito"</p>
-        <div>290 РУБ.</div>
+        <div class="price">290 РУБ.</div>
         <a href="#">Купить</a>
       </article>
       <article class="catalog-item">
         <a href="#"><img src="#" width height></a>
         <p>Глина для укладки волос "American crew"</p>
-        <div>500 РУБ.</div>
+        <div class="price">500 РУБ.</div>
         <a href="#">Купить</a>
       </article>
       <article class="catalog-item">
         <a href="#"><img src="#" width height></a>
         <p>Гель для волос "American crew"</p>
-        <div>300 РУБ.</div>
+        <div class="price">300 РУБ.</div>
         <a href="#">Купить</a>
       </article>
       <article class="catalog-item">
         <a href="#"><img src="#" width height></a>
         <p>Набор для бритья "Baxter of Сalifornia"</p>
-        <div>3 900 РУБ.</div>
+        <div class="price">3 900 РУБ.</div>
         <a href="#">Купить</a>
       </article>
       <div>
